--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Veritas Foresight</title>
+<title>Veritas Foresight · Симулятор резонансу</title>
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -1030,6 +1030,34 @@ input[type=range].temp-range::-webkit-slider-thumb {
     font-style: italic;
 }
 
+
+/* ── Language switcher ── */
+.lang-switch {
+    position: fixed;
+    top: 12px;
+    right: 16px;
+    z-index: 100;
+    display: flex;
+    gap: 0;
+    border: 1px solid var(--border);
+}
+
+.lang-btn {
+    padding: 4px 10px;
+    font-family: var(--mono);
+    font-size: 10px;
+    letter-spacing: 0.1em;
+    background: var(--surface);
+    color: var(--muted);
+    border: none;
+    cursor: pointer;
+    transition: all 0.2s;
+    border-right: 1px solid var(--border);
+}
+.lang-btn:last-child { border-right: none; }
+.lang-btn.active { background: var(--bg); color: var(--accent); }
+.lang-btn:hover:not(.active) { color: var(--text); }
+
 </style>
 </head>
 <body>
@@ -1038,21 +1066,30 @@ input[type=range].temp-range::-webkit-slider-thumb {
     <div class="header">
         <span class="header-eye">🔭</span>
         <div class="header-title">Veritas Foresight</div>
-        <div class="header-sub">Narrative Resonance Simulator</div>
-        <div class="header-version">v1.0 · part of Veritas Protocol ecosystem</div>
+        <div class="header-sub"><span id="tagline">Симулятор наративного резонансу</span></div>
+        <div class="header-version">v1.0 · частина екосистеми Veritas Protocol</div>
     </div>
 
-    <div class="quote">
-        When you define a future, you begin to collapse it into being.<br>
-        An argument is not a logical construct — it is a vector in the probability space of possible worlds.
+    <div class="quote" id="mainQuote">
+        <span class="quote-uk">Коли ти описуєш майбутнє — ти починаєш колапсувати його в реальність.<br>
+        Аргумент — це не логічна конструкція. Це вектор у просторі ймовірностей можливих світів.</span>
+        <span class="quote-en" style="display:none">When you define a future, you begin to collapse it into being.<br>
+        An argument is not a logical construct — it is a vector in the probability space of possible worlds.</span>
     </div>
 
     <div class="field-bar" id="fieldBar">
         <div class="field-dot" id="fieldDot"></div>
-        <div class="field-topics" id="fieldTopics">loading information field...</div>
+        <div class="field-topics" id="fieldTopics"><span id="fieldLoadingText">завантаження інформаційного поля...</span></div>
         <div class="field-crisis" id="fieldCrisis"></div>
     </div>
 
+
+
+    <!-- LANGUAGE SWITCHER -->
+    <div class="lang-switch">
+        <button class="lang-btn active" id="langUA" onclick="setLang('uk')">UA</button>
+        <button class="lang-btn" id="langEN" onclick="setLang('en')">EN</button>
+    </div>
 
     <!-- MODE TABS -->
     <div class="mode-tabs">
@@ -1069,12 +1106,12 @@ input[type=range].temp-range::-webkit-slider-thumb {
             <div class="battle-col">
                 <div class="battle-label a">аргумент A</div>
                 <textarea class="battle-textarea" id="argA"
-                    placeholder="AI regulation will strengthen and slow down tech acceleration"></textarea>
+                    placeholder="Регуляція ШІ посилиться і сповільнить технологічне прискорення"></textarea>
             </div>
             <div class="battle-col">
                 <div class="battle-label b">аргумент B</div>
                 <textarea class="battle-textarea" id="argB"
-                    placeholder="AI will advance faster than any regulation can control"></textarea>
+                    placeholder="ШІ розвиватиметься швидше ніж будь-яка регуляція зможе контролювати"></textarea>
             </div>
         </div>
 
@@ -1106,7 +1143,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
             <label class="toggle">
                 <input type="checkbox" id="battleUseField" checked>
                 <div class="toggle-track"><div class="toggle-thumb"></div></div>
-                live field
+                живе поле
             </label>
             <button class="btn-clear" onclick="clearBattleResults()" style="
                 padding:8px 16px;background:transparent;border:1px solid var(--dim);
@@ -1117,7 +1154,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
                 ✕ очистити
             </button>
             <button class="btn-battle" id="btnBattle" onclick="runBattle()">
-                ⚔ битися
+                <span id="btnBattleText">⚔ битися</span>
             </button>
         </div>
 
@@ -1172,7 +1209,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
             </div>
             <div class="form-row">
                 <label class="form-label">опис (необов'язково)</label>
-                <input class="form-input" id="newDesc" placeholder="Short description for display">
+                <input class="form-input" id="newDesc" placeholder="Короткий опис для відображення">
             </div>
             <div class="form-actions">
                 <button class="btn-cancel" onclick="toggleAddForm()">скасувати</button>
@@ -1182,7 +1219,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
     </div>
 
     <div class="input-section">
-        <label class="input-label">Your argument — a claim, a narrative, a hypothesis</label>
+        <label class="input-label">Ваш аргумент — твердження, наратив, гіпотеза</label>
         <textarea id="argumentInput" rows="3"
             placeholder="e.g. — AI regulation will collapse under industry pressure before 2026 ends"></textarea>
 
@@ -1217,7 +1254,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
             <label class="toggle">
                 <input type="checkbox" id="useField" checked>
                 <div class="toggle-track"><div class="toggle-thumb"></div></div>
-                live field
+                живе поле
             </label>
 
             <button class="btn-clear" id="btnClear" onclick="clearResults()" style="
@@ -1229,25 +1266,26 @@ input[type=range].temp-range::-webkit-slider-thumb {
                 ✕ очистити
             </button>
             <button class="btn-run" id="btnRun" onclick="runSimulation()">
-                ▶ simulate
+                <span id="btnRunText">▶ симулювати</span>
             </button>
         </div>
     </div>
 
+    <div id="translationHint" style="display:none;font-size:10px;color:var(--muted);padding:4px 0 2px;font-style:italic;"></div>
     <div class="error-msg" id="errorMsg"></div>
     <div class="loading" id="loading">
         <div class="loading-spinner"></div>
-        <div>computing resonance field...</div>
+        <div>обчислення поля резонансу...</div>
     </div>
 
     <div class="results" id="results">
 
         <div class="state-panel">
             <div class="state-header">
-                <span>probability field · final state</span>
+                <span><span id="probFieldTitle">поле ймовірностей · фінальний стан</span></span>
                 <span class="state-entropy" id="entropyVal"></span>
             </div>
-            <div style="padding:14px 16px 6px; font-size:11px; color:var(--muted);">dominant trajectory</div>
+            <div style="padding:14px 16px 6px; font-size:11px; color:var(--muted);"><span id="dominantLabel">домінантна траєкторія</span></div>
             <div style="padding:0 16px 14px;">
                 <div class="state-dominant" id="dominantName"></div>
                 <div id="dominantDesc" style="font-size:11px;color:var(--muted);margin-top:4px;"></div>
@@ -1256,10 +1294,10 @@ input[type=range].temp-range::-webkit-slider-thumb {
         </div>
 
         <div class="field-panel" id="fieldPanel" style="display:none">
-            <div class="field-panel-title">information field context used</div>
+            <div class="field-panel-title">використано контекст інформаційного поля</div>
             <div class="field-tags" id="fieldTagsResult"></div>
             <div class="crisis-meter">
-                <span>crisis level</span>
+                <span>рівень кризи</span>
                 <div class="crisis-bar-wrap">
                     <div class="crisis-bar" id="crisisBar" style="width:0%"></div>
                 </div>
@@ -1287,7 +1325,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
             <div class="chart-legend" id="chartLegend"></div>
         </div>
 
-        <div class="history-title">iteration log</div>
+        <div class="history-title" id="iterLogTitle">журнал ітерацій</div>
         <div class="history-list" id="historyList"></div>
 
     </div>
@@ -1295,7 +1333,7 @@ input[type=range].temp-range::-webkit-slider-thumb {
     </div><!-- /simulate-section -->
 
     <div class="footer">
-        <div>Veritas Foresight v1.0 · does not predict · measures resonance</div>
+        <div><span id="subtitle">Veritas Foresight v1.0 · не передбачає · вимірює резонанс</span></div>
         <div>
             <a href="https://veritas-protocol.onrender.com" target="_blank">Veritas Protocol</a>
             · <a href="https://github.com/Architekt-future/veritas-foresight" target="_blank">GitHub</a>
@@ -1333,7 +1371,7 @@ async function loadField() {
 async function runSimulation() {
     const argument = document.getElementById('argumentInput').value.trim();
     if (!argument) {
-        showError('Please enter an argument to simulate.');
+        showError('Введіть аргумент для симуляції.');
         return;
     }
 
@@ -1449,6 +1487,17 @@ function renderResults(data) {
             </div>`;
     });
 
+    // Show translation hint if argument was auto-translated
+    const transHint = document.getElementById('translationHint');
+    if (transHint) {
+        if (data.argument_translated) {
+            transHint.textContent = (window._t||I18N.uk).translated + ': "' + data.argument_translated + '"';
+            transHint.style.display = 'block';
+        } else {
+            transHint.style.display = 'none';
+        }
+    }
+
     // Render chart
     if (data.final_state.chart_data) {
         window._lastChartData = data.final_state.chart_data;
@@ -1513,7 +1562,7 @@ function renderFuturesList() {
             <div class="future-item-name">${esc(f.name)}</div>
             <div class="future-item-desc">${esc(f.description || f.core_logic)}</div>
             <span class="future-item-badge ${f.is_default ? '' : 'custom'}">
-                ${f.is_default ? 'default' : 'custom'}
+                ${(window._t||I18N.uk)[f.is_default?'default':'custom']}
             </span>
             <button class="future-item-toggle"
                 onclick="toggleFuture('${f.id}', ${!f.is_active})">
@@ -1778,9 +1827,9 @@ function renderBattleResults(data) {
     // Verdict
     const verdict = document.getElementById('battleVerdict');
     verdict.innerHTML = `
-        <div class="battle-winner-label">переможець · домінантне майбутнє: ${esc(dominant)}</div>
+        <div class="battle-winner-label">${(window._t||I18N.uk).winner} ${esc(dominant)}</div>
         <div class="battle-winner-arg ${winner.toLowerCase()}">${esc(winnerArg)}</div>
-        <div class="battle-winner-sub">аргумент ${winner} резонує сильніше з полем</div>
+        <div class="battle-winner-sub">аргумент ${winner} ${(window._t||I18N.uk).resonates}</div>
     `;
 
     // VS display
@@ -2014,6 +2063,117 @@ function clearBattleResults() {
     window._lastBattleChartData = null;
     hiddenBattleSeries = new Set();
 }
+
+
+// ── i18n ──────────────────────────────────────────────────────────────────────
+const I18N = {
+    uk: {
+        tagline: 'Симулятор наративного резонансу',
+        subtitle: 'Veritas Foresight v1.0 · не передбачає · вимірює резонанс',
+        argPlaceholder: 'Ваш аргумент — твердження, наратив, гіпотеза',
+        argAPlaceholder: 'Регуляція ШІ посилиться і сповільнить технологічне прискорення',
+        argBPlaceholder: 'ШІ розвиватиметься швидше ніж будь-яка регуляція зможе контролювати',
+        fieldLoading: 'завантаження інформаційного поля...',
+        computing: 'обчислення поля резонансу...',
+        battling: "аргументи б'ються...",
+        crisisLevel: 'рівень кризи',
+        liveField: 'живе поле',
+        simBtn: '▶ симулювати',
+        battleBtn: '⚔ битися',
+        clearBtn: '✕ очистити',
+        probField: 'поле ймовірностей · фінальний стан',
+        dominant: 'домінантна траєкторія',
+        fieldUsed: 'використано контекст інформаційного поля',
+        iterLog: 'журнал ітерацій',
+        errEmpty: 'Введіть аргумент для симуляції.',
+        errBothArgs: 'Введіть обидва аргументи',
+        tabSim: '▶ симуляція',
+        tabBattle: '⚔ битва аргументів',
+        steps: 'кроки',
+        rounds: 'раунди',
+        default: 'типовий',
+        custom: 'власний',
+        winner: 'переможець · домінантне майбутнє:',
+        resonates: 'резонує сильніше з полем',
+        translated: '🔄 автопереклад',
+    },
+    en: {
+        tagline: 'Narrative Resonance Simulator',
+        subtitle: 'Veritas Foresight v1.0 · does not predict · measures resonance',
+        argPlaceholder: 'Your argument — a claim, a narrative, a hypothesis',
+        argAPlaceholder: 'AI regulation will strengthen and slow down tech acceleration',
+        argBPlaceholder: 'AI will advance faster than any regulation can control',
+        fieldLoading: 'loading information field...',
+        computing: 'computing resonance field...',
+        battling: 'arguments are fighting...',
+        crisisLevel: 'crisis level',
+        liveField: 'live field',
+        simBtn: '▶ simulate',
+        battleBtn: '⚔ battle',
+        clearBtn: '✕ clear',
+        probField: 'probability field · final state',
+        dominant: 'dominant trajectory',
+        fieldUsed: 'information field context used',
+        iterLog: 'iteration log',
+        errEmpty: 'Please enter an argument to simulate.',
+        errBothArgs: 'Please enter both arguments.',
+        tabSim: '▶ simulation',
+        tabBattle: '⚔ argument battle',
+        steps: 'steps',
+        rounds: 'rounds',
+        default: 'default',
+        custom: 'custom',
+        winner: 'winner · dominant future:',
+        resonates: 'resonates stronger with the field',
+        translated: '🔄 auto-translated',
+    },
+};
+
+let currentLang = 'uk';
+
+function setLang(lang) {
+    currentLang = lang;
+    const t = I18N[lang];
+    document.getElementById('langUA').classList.toggle('active', lang === 'uk');
+    document.getElementById('langEN').classList.toggle('active', lang === 'en');
+
+    // Update all text elements
+    const el = (id) => document.getElementById(id);
+    const setText = (id, text) => { const e = el(id); if (e) e.textContent = text; };
+    const setPlaceholder = (id, text) => { const e = el(id); if (e) e.placeholder = text; };
+
+    setText('tagline', t.tagline);
+    setText('subtitle', t.subtitle);
+    setText('fieldLoadingText', t.fieldLoading);
+    setText('tabSimulate', t.tabSim);
+    setText('tabBattle', t.tabBattle);
+    setText('btnRunText', t.simBtn);
+    setText('btnBattleText', t.battleBtn);
+    setText('btnClearText', t.clearBtn);
+    setText('probFieldTitle', t.probField);
+    setText('dominantLabel', t.dominant);
+    setText('iterLogTitle', t.iterLog);
+    setPlaceholder('argumentInput', t.argPlaceholder);
+    setPlaceholder('argA', t.argAPlaceholder);
+    setPlaceholder('argB', t.argBPlaceholder);
+
+    // Update loading texts
+    const loadingDivs = document.querySelectorAll('.loading div:last-child');
+    if (loadingDivs[0]) loadingDivs[0].textContent = t.computing;
+    if (loadingDivs[1]) loadingDivs[1].textContent = t.battling;
+
+    // Quote switching
+    const quoteUk = document.querySelector('.quote-uk');
+    const quoteEn = document.querySelector('.quote-en');
+    if (quoteUk) quoteUk.style.display = lang === 'uk' ? '' : 'none';
+    if (quoteEn) quoteEn.style.display = lang === 'en' ? '' : 'none';
+
+    // Store for dynamic use
+    window._t = t;
+}
+
+// Initialize
+window._t = I18N['uk'];
 
 </script>
 </body>
